[package]
name = "rag-system"
version = "0.1.0"
edition = "2021"

[dependencies]
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
qdrant-client = "1.10.1"
